--- a/translation/uk/the_besieged_farm.po
+++ b/translation/uk/the_besieged_farm.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: \n"
+"POT-Creation-Date: 2009-03-09 15:15+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Igor Paliychuk <mansonigor@gmail.com>\n"
 "Language-Team: german\n"
@@ -24,20 +24,39 @@ msgid "The besieged farm"
 msgstr "Обложеної фермі"
 
 #: besieged_farm.xml
-msgid "The peasants are rescued, the goblins slain, and the service paid. What more can you ask for?"
-msgstr "Селяни були врятовані, гобліни убитий, і послуга оплачується. Чого ще можна бажати?"
+msgid ""
+"The peasants are rescued, the goblins slain, and the service paid. What more "
+"can you ask for?"
+msgstr ""
+"Селяни були врятовані, гобліни убитий, і послуга оплачується. Чого ще можна "
+"бажати?"
 
 #: besieged_farm.xml
-msgid "The peasants are rescued and the goblins slain. Time to collect the reward for the trouble in Joringsbridge."
-msgstr "Селяни були врятовані і гобліни убитий. Час збирати винагороду за неприємностей в Joringsbridge."
+#, fuzzy
+msgid ""
+"The peasants are rescued and the goblins slain. It's time to collect the "
+"reward for the trouble in Joringsbridge."
+msgstr ""
+"Селяни були врятовані і гобліни убитий. Час збирати винагороду за "
+"неприємностей в Joringsbridge."
 
 #: besieged_farm.xml
-msgid "The goblins around Bron's farm are not among the living anymore. I should knock at the door and make sure, everything is all right. No peasants, no money."
-msgstr "Гоблінів близько ферми Брона не було в живих більше. Я повинен постукати у двері і переконайтеся, що все в порядку. Ні селян, немає грошей."
+#, fuzzy
+msgid ""
+"The goblins around Bron's farm are not among the living anymore. I should "
+"knock at the door and make sure everything is all right. No peasants, no "
+"money."
+msgstr ""
+"Гоблінів близько ферми Брона не було в живих більше. Я повинен постукати у "
+"двері і переконайтеся, що все в порядку. Ні селян, немає грошей."
 
 #: besieged_farm.xml
-msgid "The farm of a peasant named Michel Bron is besieged by goblins. His family needs help - fast."
-msgstr "Ферми селянського імені Мішель Брон осаджують гоблінів. Його сім'я потребує допомоги - швидко."
+msgid ""
+"The farm of a peasant named Michel Bron is besieged by goblins. His family "
+"needs help - fast."
+msgstr ""
+"Ферми селянського імені Мішель Брон осаджують гоблінів. Його сім'я потребує "
+"допомоги - швидко."
 
 #: besieged_farm.xml
 msgid "Sergeant Lutterer"
@@ -52,15 +71,20 @@ msgid "Ah! Are you feeling like earning the money after all?"
 msgstr "Ах! Чи відчуваєте ви себе, як заробляти гроші в кінці кінців?"
 
 #: besieged_farm.xml
-msgid "Don't think, I haven't seen you hanging around back there."
+#, fuzzy
+msgid "Don't think I haven't seen you hanging around back there."
 msgstr "Не думайте, я не бачила тебе стирчати туди."
 
 #: besieged_farm.xml
-msgid "Don't think, I haven't seen you and your friend hanging around back there."
+#, fuzzy
+msgid ""
+"Don't think I haven't seen you and your friend hanging around back there."
 msgstr "Не подумайте, я не бачив вас і вашого друга стирчати туди."
 
 #: besieged_farm.xml
-msgid "Don't think, I haven't seen you and your friends hanging around back there."
+#, fuzzy
+msgid ""
+"Don't think I haven't seen you and your friends hanging around back there."
 msgstr "Не подумайте, я не бачив вас і ваших друзів стирчати туди."
 
 #: besieged_farm.xml
@@ -68,11 +92,16 @@ msgid "But I don't want to complain."
 msgstr "Але я не хочу скаржитися."
 
 #: besieged_farm.xml
-msgid "You know the drill: Get to the Northern Meadow and drive away the goblins around Bron's farm."
-msgstr "Ви знаєте тренування: Добратися до Північного Лугові і відігнати гоблінів близько ферми Брона."
+msgid ""
+"You know the drill: Get to the Northern Meadow and drive away the goblins "
+"around Bron's farm."
+msgstr ""
+"Ви знаєте тренування: Добратися до Північного Лугові і відігнати гоблінів "
+"близько ферми Брона."
 
 #: besieged_farm.xml
-msgid "I don't care, how you do it, even if you gobble them raw."
+#, fuzzy
+msgid "I don't care how you do it, even if you gobble them raw."
 msgstr "Мені все одно, як ви це робите, навіть якщо ви з'їсти їх сирими."
 
 #: besieged_farm.xml
@@ -80,11 +109,13 @@ msgid "Just kidding."
 msgstr "Жартую."
 
 #: besieged_farm.xml
-msgid "When you're done come back to me."
+#, fuzzy
+msgid "When you're done, come back to me."
 msgstr "Коли ви закінчите повертаються до мене."
 
 #: besieged_farm.xml
-msgid "On my way."
+#, fuzzy
+msgid "I'm on my way."
 msgstr "На моєму шляху."
 
 #: besieged_farm.xml
@@ -92,8 +123,10 @@ msgid "aisNorthMeadow"
 msgstr ""
 
 #: besieged_farm.xml
-msgid "That should have been enough goblins. I better look after Bron's family."
-msgstr "Це повинно було бути досить гоблінів. Я краще піклуватися про сім'ю Брона."
+msgid ""
+"That should have been enough goblins. I better look after Bron's family."
+msgstr ""
+"Це повинно було бути досить гоблінів. Я краще піклуватися про сім'ю Брона."
 
 #: besieged_farm.xml
 msgid "The goblins are gone. Are you alright?"
@@ -120,16 +153,24 @@ msgid "How so?"
 msgstr "Як же так?"
 
 #: besieged_farm.xml
-msgid "With a crytal of Avearea, of course. It's been handed down in my family for generations."
-msgstr "З crytal з Avearea, звичайно. Це був винесений в моїй родині протягом поколінь."
+msgid ""
+"With a crytal of Avearea, of course. It's been handed down in my family for "
+"generations."
+msgstr ""
+"З crytal з Avearea, звичайно. Це був винесений в моїй родині протягом "
+"поколінь."
 
 #: besieged_farm.xml
 msgid "Of course. Silly of me."
 msgstr "Звичайно. Нерозумно з мого боку."
 
 #: besieged_farm.xml
-msgid "Really now, \"..name..\". Did you think she'd use carrier pigeons in this day and age?"
-msgstr "Невже тепер, \".. назва .. \". Невже ви думаєте, вона б використовувати поштових голубів в цей день і віку?"
+msgid ""
+"Really now, \"..name..\". Did you think she'd use carrier pigeons in this "
+"day and age?"
+msgstr ""
+"Невже тепер, \".. назва .. \". Невже ви думаєте, вона б використовувати "
+"поштових голубів в цей день і віку?"
 
 #: besieged_farm.xml
 msgid "Let's just go collect the money."
@@ -148,8 +189,13 @@ msgid "I've already heard of it."
 msgstr "Я вже чув про неї."
 
 #: besieged_farm.xml
-msgid "Michel is in the tavern and getting plastered. All in honor of your bravery, of course."
-msgstr "Мішель знаходиться в таверні та отримання оштукатурені. Все в честь вашої хоробрості, звичайно."
+#, fuzzy
+msgid ""
+"Michel is in the tavern getting plastered - all in honor of your bravery, of "
+"course."
+msgstr ""
+"Мішель знаходиться в таверні та отримання оштукатурені. Все в честь вашої "
+"хоробрості, звичайно."
 
 #: besieged_farm.xml
 msgid "But that shall be of no concern to you."
@@ -158,4 +204,3 @@ msgstr "Але це повинно бути ніякого відношення 
 #: besieged_farm.xml
 msgid "Here's the money."
 msgstr "Ось гроші."
-
