--- a/translation/ru/the_besieged_farm.po
+++ b/translation/ru/the_besieged_farm.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2011-06-26 23:34+0400\n"
+"PO-Revision-Date: 2011-08-18 04:18+0400\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: ru\n"
@@ -19,19 +19,20 @@ msgstr ""
 
 #: besieged_farm.xml
 msgid "The besieged farm"
-msgstr ""
+msgstr "Осажденная ферма"
 
 #: besieged_farm.xml
 msgid ""
 "The peasants are rescued, the goblins slain, and the service paid. What more "
 "can you ask for?"
-msgstr ""
+msgstr "Крестьяне спасены, гоблины убиты, услуги оплачены. Что ещё тебе надо?"
 
 #: besieged_farm.xml
 msgid ""
 "The peasants are rescued and the goblins slain. It's time to collect the "
 "reward for the trouble in Joringsbridge."
 msgstr ""
+"Крестьяне спасены и гоблины убиты. Время забрать награду из Джорингсбриджа."
 
 #: besieged_farm.xml
 msgid ""
@@ -45,6 +46,8 @@ msgid ""
 "The farm of a peasant named Michel Bron is besieged by goblins. His family "
 "needs help - fast."
 msgstr ""
+"Ферма крестьянина Мишеля Брона осаждена гоблинами. Его семья остро нуждается "
+"в помощи."
 
 #: besieged_farm.xml
 msgid "Sergeant Lutterer"
@@ -84,11 +87,11 @@ msgstr ""
 
 #: besieged_farm.xml
 msgid "I don't care how you do it, even if you gobble them raw."
-msgstr ""
+msgstr "Мне все равно, как ты это сделаешь, хоть съешь их."
 
 #: besieged_farm.xml
 msgid "Just kidding."
-msgstr ""
+msgstr "Всего лишь шучу."
 
 #: besieged_farm.xml
 msgid "When you're done, come back to me."
@@ -100,7 +103,7 @@ msgstr "Я уже в пути."
 
 #: besieged_farm.xml
 msgid "aisNorthMeadow"
-msgstr ""
+msgstr "Северные Низины"
 
 #: besieged_farm.xml
 msgid ""
@@ -109,7 +112,7 @@ msgstr ""
 
 #: besieged_farm.xml
 msgid "The goblins are gone. Are you alright?"
-msgstr ""
+msgstr "Гоблины ушли. Вы в порядке?"
 
 #: besieged_farm.xml
 msgid "Thank you very much."
@@ -139,7 +142,7 @@ msgstr ""
 
 #: besieged_farm.xml
 msgid "Of course. Silly of me."
-msgstr ""
+msgstr "Ну конечно. Какой же я глупенький."
 
 #: besieged_farm.xml
 msgid ""
@@ -153,7 +156,7 @@ msgstr ""
 
 #: besieged_farm.xml
 msgid "Brons Farm"
-msgstr ""
+msgstr "Ферма Брона"
 
 #: besieged_farm.xml
 msgid "It's done."
@@ -167,11 +170,11 @@ msgstr "Я уже слышал об этом."
 msgid ""
 "Michel is in the tavern getting plastered - all in honor of your bravery, of "
 "course."
-msgstr ""
+msgstr "Мишель напивается в таверне - в честь твоей храбрости, конечно же."
 
 #: besieged_farm.xml
 msgid "But that shall be of no concern to you."
-msgstr ""
+msgstr "Но это не твоя забота."
 
 #: besieged_farm.xml
 msgid "Here's the money."
